# SagePaint

./: .gitignore  LICENSE  README.md  stagecommitpush.sh
SagePaint/: CMakeLists.txt  CMakePresets.json
SagePaint/SagePaint/: CMakeLists.txt  SagePaint.cpp  SagePaint.h
SagePaint/SagePaint/app/: CanvasManager.cpp  CanvasManager.h  MainApp.cpp  MainApp.h  ProjectManager.cpp  ProjectManager.h  SettingsManager.cpp  SettingsManager.h
SagePaint/SagePaint/app/file/: FileManager.cpp  FileManager.h  Image.cpp  Image.h  Layer.cpp  Layer.h
SagePaint/SagePaint/app/graphics/: CanvasObject.cpp  CanvasObject.h  Common.cpp  Common.h  DragPointObject.cpp  DragPointObject.h  GameObject.cpp  GameObject.h  Shader.cpp  Shader.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  TriObject.cpp  TriObject.h
SagePaint/SagePaint/app/graphics/drawables/: CanvasModel.cpp  CanvasModel.h  DragPointModel.cpp  DragPointModel.h  Model.cpp  Model.h  TriModel.cpp  TriModel.h
SagePaint/SagePaint/app/input/: InputFunctions.cpp  InputFunctions.h  InputManager.cpp  InputManager.h  InputMap.cpp  InputMap.h
SagePaint/SagePaint/app/tools/: FillTool.cpp  FillTool.h  LineTool.cpp  LineTool.h  PencilTool.cpp  PencilTool.h  PickerTool.cpp  PickerTool.h  SelectTool.cpp  SelectTool.h  ShapeTool.cpp  ShapeTool.h  ToolManager.cpp  ToolManager.h
SagePaint/SagePaint/app/ui/: Canvas.cpp  Canvas.h  Common.h  Icons.cpp  Icons.h  Triangle.cpp  Triangle.h  UIManager.cpp  UIManager.h  UIObject.cpp
SagePaint/SagePaint/shaders/: standard.frag  standard.vert
SagePaint/SagePaint/shaders/canvas/: final.frag  shader.frag  shader.vert  shader_v2.frag
SagePaint/SagePaint/shaders/canvas/compositing/: add.frag  darken.frag  darken_rgb.frag  lighten.frag  lighten_rgb.frag  multiply.frag  normal.frag
SagePaint/include/: Debug.h  ImFileDialog.cpp  nfd_d.lib  shortcuts.h  stb_imageLICENSE
